Verify DEFAULT_JVM_OPTS in start scripts (#1195)
* Check applicationDefaultJvmArgs in start scripts

* Update src/docs/application-plugin/README.md